# emailer

./: README.md  setup.cfg  setup.py
emailer/: __init__.py  emailer.py
