[metadata]
name = emailer 
version = attr: emailer.__version__
author = Fredrick W. Warren
author_email = fredw@northriverboats.com
description = 
long_description = file: README.md
long_desription_content_type = text/markdown
keywords = email
license = MIT License
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
packages = find:
